[project]
name = "my_uv_project"
version = "0.1.0"
description = "A project managed with uv."
requires-python = "==3.11"
dependencies = [
    "greenlet==3.1.1",
    "mysql-connector-python==8.3.0",
    "numpy==1.26.4",
    "pandas==2.1.0",
    "pika==1.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "shapely==2.0.6",
    "six==1.16.0",
    "SQLAlchemy==2.0.27",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "Unidecode==1.3.6"
]

[project.optional-dependencies]
dev = [
    "pytest",
    #"ruff",           # Linter and formatter
    #"mypy",           # Type checker
    #"pre-commit",     # For git hooks
]

# You can also configure tools like ruff or mypy here
[tool.ruff]
#line-length = 120
# ... other ruff settings

[tool.mypy]
# ... mypy settings