[project]
name = "uv-template"
version = "0.1.0"
description = "A well-structured FastAPI."
requires-python = "==3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic-settings==2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",      
    "ruff==0.4.4",        
    "mypy==1.10.0",       
    "httpx==0.27.0",      
]

# --- Tool Configuration ---
[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes, pycodestyle, and isort rules.
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]